[package]
name = "st"
version = "0.1.0"
edition = "2024"

[dependencies]
santiago = { git = "https://github.com/hapejot/santiago.git", version = "1.3.1" }
pjl-static-strings = { git = "https://github.com/hapejot/pjl.rs.git", version = "0.1.0" }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
